[package]
name = "iron"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
http = "1.3.1"
libc = "0.2.171"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

[dependencies.tokio-rustls]
version = "0.26.2"
default-features = false
features = ["ring","tls12","logging"]
