[package]
name = "iron"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
http = "1.3.1"
serde_json = "1.0.140"

[dependencies.log]
version = "0.4.27"
features = ["std"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tokio-rustls]
version = "0.26.2"
default-features = false
features = ["ring", "tls12", "logging"]
